# PersonalOps

./: .gitignore  README.md
apps/api/: .env.example  alembic.ini  config.py  database.py  db_migrate.py  main.py  models.py  personalops_cli.py  personalops_cli_manage.py  personalops_cli_nav.py  pyproject.toml  requirements.txt  schema.py  test_agent_26.py  test_agent_followup.py  test_auth_b1.py  test_auth_email.py  test_conversation_export_b4.py  test_credentials_b2.py  test_deployment.py  test_ocr_extracted_b3.py  test_personalization_p1.py  test_personalization_p2.py  test_personalization_p3.py  test_prompt_log.py  test_storage_b3.py  test_study_concepts.py  test_study_questions.py  test_study_s1.py  test_study_tests.py  test_verify_fallback.py
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 20260607_0001_baseline_phase2_schema.py  20260608_0002_github_links.py  20260609_0003_watch_folders.py  20260610_0004_chat_metrics.py  20260610_0005_message_created_at.py  20260610_0006_workspace_chat_mode.py  20260611_0007_life_plugins_outlook.py  20260612_0008_fix_life_plugin_tables.py  20260612_0009_life_provider_gmail.py  20260612_0010_prompt_log.py  20260612_0011_memory_personalization.py  (+9 more)
apps/api/routers/: auth.py  chat.py  files.py  github.py  life_plugins.py  me.py  memory.py  metrics.py  oauth_pages.py  personalization.py  study.py  templates.py  tools.py  watcher.py  workspaces.py
apps/api/scripts/: backfill_prompt_log.py
apps/api/services/: chunker.py  code_search.py  conversation.py  db_ordering.py  deployment.py  folder_watcher.py  github_client.py  github_sync.py  health_check.py  indexer.py  metrics.py  ocr.py  openai_runtime.py  overview.py  parser.py  rag.py  templates.py  web_search.py  workspace_access.py  workspace_ops.py
scripts/: dev.sh  (+2 more)
(+128 files in other folders)
